[gd_scene load_steps=53 format=3 uid="uid://nie7s6lxy6mj"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1_27exr"]
[ext_resource type="Texture2D" uid="uid://cvxw7jmbd5adr" path="res://Assets/Art/character1.png" id="2_wfngw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w6a8a"]
size = Vector2(135, 135)

[sub_resource type="GDScript" id="GDScript_v73l0"]

[sub_resource type="Animation" id="Animation_bfhen"]
resource_name = "Chop_Left"
length = 0.02
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [52]
}

[sub_resource type="Animation" id="Animation_thw1b"]
resource_name = "Chop_Left_2"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [52, 53, 54]
}

[sub_resource type="Animation" id="Animation_dydua"]
resource_name = "Chop_Right"
length = 0.02
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [60]
}

[sub_resource type="Animation" id="Animation_7pcaq"]
resource_name = "Chop_Right_2"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [60, 61, 62]
}

[sub_resource type="Animation" id="Animation_l6ff0"]
resource_name = "Chop_Up"
length = 0.02
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [56]
}

[sub_resource type="Animation" id="Animation_lpnke"]
resource_name = "Chop_Up_2"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [56, 57, 58]
}

[sub_resource type="Animation" id="Animation_c8ai6"]
resource_name = "Chop_down"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [48]
}

[sub_resource type="Animation" id="Animation_f4ags"]
resource_name = "Chop_down_2"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [48, 49, 50]
}

[sub_resource type="Animation" id="Animation_cxn4w"]
resource_name = "Idle_Left"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [36, 37]
}

[sub_resource type="Animation" id="Animation_a5ugn"]
resource_name = "Idle_Right"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [44, 45]
}

[sub_resource type="Animation" id="Animation_wbo7x"]
resource_name = "Idle_Up"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [40, 41]
}

[sub_resource type="Animation" id="Animation_dq3w0"]
resource_name = "Idle_down"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [32, 33]
}

[sub_resource type="Animation" id="Animation_q3f1p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_q6dw7"]
resource_name = "Walk_Up"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19]
}

[sub_resource type="Animation" id="Animation_euqqv"]
resource_name = "Walk_Up_Right"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_el6g0"]
resource_name = "Walk_down"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_cyu23"]
resource_name = "Walk_down_left"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_f2yjt"]
resource_name = "Walk_left"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_b5oxp"]
resource_name = "Walk_left_up"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_2gowh"]
resource_name = "Walk_right"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27]
}

[sub_resource type="Animation" id="Animation_vs6gi"]
resource_name = "Walk_right_down"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6sw35"]
_data = {
"Chop_Left": SubResource("Animation_bfhen"),
"Chop_Left_2": SubResource("Animation_thw1b"),
"Chop_Right": SubResource("Animation_dydua"),
"Chop_Right_2": SubResource("Animation_7pcaq"),
"Chop_Up": SubResource("Animation_l6ff0"),
"Chop_Up_2": SubResource("Animation_lpnke"),
"Chop_down": SubResource("Animation_c8ai6"),
"Chop_down_2": SubResource("Animation_f4ags"),
"Idle_Left": SubResource("Animation_cxn4w"),
"Idle_Right": SubResource("Animation_a5ugn"),
"Idle_Up": SubResource("Animation_wbo7x"),
"Idle_down": SubResource("Animation_dq3w0"),
"RESET": SubResource("Animation_q3f1p"),
"Walk_Up": SubResource("Animation_q6dw7"),
"Walk_Up_Right": SubResource("Animation_euqqv"),
"Walk_down": SubResource("Animation_el6g0"),
"Walk_down_left": SubResource("Animation_cyu23"),
"Walk_left": SubResource("Animation_f2yjt"),
"Walk_left_up": SubResource("Animation_b5oxp"),
"Walk_right": SubResource("Animation_2gowh"),
"Walk_right_down": SubResource("Animation_vs6gi")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2fy8w"]
animation = &"Chop_down_2"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yrtnk"]
animation = &"Chop_Up_2"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0dl24"]
animation = &"Chop_Right_2"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0166l"]
animation = &"Chop_Left_2"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_4fnm7"]
blend_point_0/node = SubResource("AnimationNodeAnimation_2fy8w")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_yrtnk")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_0dl24")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_0166l")
blend_point_3/pos = Vector2(-1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1maxo"]
animation = &"Idle_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qpf6d"]
animation = &"Idle_Up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4vseg"]
animation = &"Idle_Right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dvfju"]
animation = &"Idle_Left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_2tmb6"]
blend_point_0/node = SubResource("AnimationNodeAnimation_1maxo")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_qpf6d")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_4vseg")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_dvfju")
blend_point_3/pos = Vector2(-1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_k40ss"]
animation = &"Walk_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lx7xx"]
animation = &"Walk_Up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0fdkm"]
animation = &"Walk_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kxgb0"]
animation = &"Walk_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_p2na2"]
animation = &"Walk_down_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sc7qx"]
animation = &"Walk_right_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ge84y"]
animation = &"Walk_left_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kxcnf"]
animation = &"Walk_Up_Right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_njdwx"]
blend_point_0/node = SubResource("AnimationNodeAnimation_k40ss")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_lx7xx")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_0fdkm")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_kxgb0")
blend_point_3/pos = Vector2(-1, 0)
blend_point_4/node = SubResource("AnimationNodeAnimation_p2na2")
blend_point_4/pos = Vector2(-0.5, 0.5)
blend_point_5/node = SubResource("AnimationNodeAnimation_sc7qx")
blend_point_5/pos = Vector2(0.5, 0.5)
blend_point_6/node = SubResource("AnimationNodeAnimation_ge84y")
blend_point_6/pos = Vector2(-0.5, -0.5)
blend_point_7/node = SubResource("AnimationNodeAnimation_kxcnf")
blend_point_7/pos = Vector2(0.5, -0.5)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_h58hq"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_t374m"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_j8ywl"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_d6sx3"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fv5j7"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_djccu"]
states/Chop2/node = SubResource("AnimationNodeBlendSpace2D_4fnm7")
states/Chop2/position = Vector2(335, 191)
states/End/position = Vector2(702, 118)
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_2tmb6")
states/Idle/position = Vector2(330, 105)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_njdwx")
states/Walk/position = Vector2(499, 100)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_h58hq"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_t374m"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_j8ywl"), "Idle", "Chop2", SubResource("AnimationNodeStateMachineTransition_d6sx3"), "Chop2", "Idle", SubResource("AnimationNodeStateMachineTransition_fv5j7")]
graph_offset = Vector2(-114, 44)

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_ga3sb"]

[node name="Player" type="CharacterBody2D"]
z_index = 1
motion_mode = 1
script = ExtResource("1_27exr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_w6a8a")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(4.17179, 4.17179)
texture = ExtResource("2_wfngw")
hframes = 4
vframes = 16

[node name="Timer" type="Timer" parent="."]
wait_time = 0.15

[node name="DashCooldown" type="Timer" parent="."]

[node name="Chop_area" type="Area2D" parent="."]
light_mask = 2
visibility_layer = 4

[node name="SemiCircle" type="CollisionPolygon2D" parent="Chop_area"]
position = Vector2(1, -0.999996)
rotation = 1.57084
scale = Vector2(0.109697, 0.0905689)
polygon = PackedVector2Array(39.5, -321.4, 85.5, -318.4, 85.5, -317.2, 155.5, -304.2, 155.5, -303, 214.5, -286, 214.5, -284.9, 262.5, -265.9, 262.5, -264.7, 327.5, -229.7, 327.5, -228.5, 376.5, -194.5, 376.5, -193.4, 418.5, -158.4, 418.5, -157.4, 466.5, -106.3, 466.5, -104.2, 503.5, -57.2, 503.5, -55.1, 533.5, -7.10001, 533.5, -4, 561.5, 53, 561.5, 56.1, 580.5, 109.2, 580.5, 113.5, 595.5, 178.3, 595.5, 185.5, 603, 299, -594, 299, -593.5, 262.4, -588.3, 199.5, -587.2, 199.5, -576.2, 134.5, -575, 134.5, -554, 62.5, -552.9, 62.5, -538.9, 26.5, -537.7, 26.5, -508.7, -30.5, -507.6, -30.5, -473.6, -83.5, -472.5, -83.5, -433.5, -131.5, -432.3, -131.5, -389.3, -174.5, -387.2, -174.5, -342.2, -212.5, -340.1, -212.5, -306.1, -236.5, -304, -236.5, -235, -273.5, -231, -273.5, -183.9, -292.5, -180.8, -292.5, -135.8, -306.5, -130.9, -306.5, -66.7, -319.5, -61.6, -319.5, -31.5, -321.4, -31.5, -322.5, 39.5, -322.5)
script = SubResource("GDScript_v73l0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_6sw35")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_djccu")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_ga3sb")
parameters/Chop2/blend_position = Vector2(0, 0)
parameters/Idle/blend_position = Vector2(0.000582457, 0.0528384)
parameters/Walk/blend_position = Vector2(-0.00404203, 1.00393)

[node name="chop" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="DashCooldown" to="." method="_on_dash_cooldown_timeout"]
[connection signal="animation_started" from="AnimationTree" to="." method="_on_animation_tree_animation_started"]
[connection signal="timeout" from="chop" to="." method="_on_chop_timeout"]
